--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -22,15 +22,12 @@ input[type="text"] {
     width: calc(100% - 110px);
     padding: 10px;
     margin-right: 10px;
+    margin-bottom: 10px;
 }
 
 button {
     padding: 10px;
-}
-
-#searchInput {
-    margin-top: 10px;
-    width: calc(100% - 20px);
+    margin-left: 5px;
 }
 
 ul {
@@ -55,13 +52,13 @@ li button {
 }
 
 @media (max-width: 600px) {
-    .container {
-        width: 95%;
-        padding: 10px;
+    input[type="text"] {
+        width: 100%;
+        margin-right: 0;
     }
 
-    input[type="text"], button {
+    button {
         width: 100%;
-        margin-bottom: 10px;
+        margin-top: 10px;
     }
 }
